<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_horizontal"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/which_metric_do_you_want_to_create"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginBottom="@dimen/form_contact_add_field_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        app:boxStrokeColor="@color/pink"
        app:color="@color/black"
        app:helperText=""
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/pink"
            android:hint="@string/enter_your_metric_here" />

    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:id="@+id/table_layout"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:id="@+id/deadline_row"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_deadline"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/deadline" />
            <TextView
                android:id="@+id/deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tap_to_open"
                android:text="@string/tap_to_add_date" />
        </TableRow>

        <TableRow
            android:id="@+id/tags_row"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_tags"
                android:contentDescription="@string/deadline" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey"
                    android:hint="@string/add_your_data_here" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>