<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_horizontal"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/metricName"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="">
    </TextView>

    <TableLayout
        android:id="@+id/table_layout"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:id="@+id/deadline_row"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_deadline"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/deadline" />
            <TextView
                android:id="@+id/deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tap_to_open"
                android:text="@string/tap_to_add_date" />
        </TableRow>

        <TableRow
            android:id="@+id/tags_row"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_tags"
                android:contentDescription="@string/deadline" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey"
                    android:hint="@string/add_your_data_here" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>

